@@ -33,6 +33,7 @@
     + XSS - Reflected in install scripts;
     + XSS - Unsafe HTML allowed in Request IP Instructions;
     + XSS - Unsafe HTML allowed in Password vault;
+    + Local exposure of DB credentials via mysqldump;
     + Addedd CSRF cookie for clear-changelog and clear-log;
 
 == 1.7.0
